--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,4 +5,6 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <a asp-controller="home" asp-action="CurrencyExchangeRates">Go to Another Page</a>
+
 </div>
