Added everyday email sending

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,10 +34,11 @@
                                     Акаунт
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" asp-controller="Account" asp-action="AccountSettings">Налаштування акаунта</a>
-                                    <form asp-action="Logout" asp-controller="Account" method="post">
+                                    @*<a class="dropdown-item" asp-controller="Account" asp-action="AccountSettings">Налаштування акаунта</a>*@
+@*                                     <form asp-action="SignOut" asp-controller="Account" method="post">
                                         <button type="submit" class="dropdown-item">Вийти</button>
-                                    </form>
+                                    </form> *@
+                                    <h2>asdfhgiasu</h2>
                                 </div>
                             </li>
                         }
