--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - CBS_ASP.NET_Core_Course_Project</title>
+    <title>@ViewData["Title"] - Курси валют</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CBS_ASP.NET_Core_Course_Project.styles.css" asp-append-version="true" />
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CBS_ASP.NET_Core_Course_Project</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Курси валют</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,26 +20,24 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Головна</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Інформація про додаток</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Акаунт
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                    @*<a class="dropdown-item" asp-controller="Account" asp-action="AccountSettings">Налаштування акаунта</a>*@
-@*                                     <form asp-action="SignOut" asp-controller="Account" method="post">
-                                        <button type="submit" class="dropdown-item">Вийти</button>
-                                    </form> *@
-                                    <h2>asdfhgiasu</h2>
-                                </div>
+                            <li class="nav-item">
+                                <form asp-controller="Account" asp-action="SetEmailSendSetting" method="post">
+                                    <input type="checkbox" id="sendEmails" name="sendEmails" value="true" @(@ViewBag.sendEmails ? "checked" : "") />
+                                    <label for="sendEmails">Send Emails</label>
+                                    <button type="submit">Save</button>
+                                </form>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-action="SignOut" asp-controller="Account">Sign out</a>
                             </li>
                         }
                         else
@@ -63,7 +61,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - CBS_ASP.NET_Core_Course_Project - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - Курси валют - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
