--- a/Views/Home/CurrencyExchangeRates.cshtml
+++ b/Views/Home/CurrencyExchangeRates.cshtml
@@ -4,6 +4,7 @@
 @{
 }
 @model ExchangeRatesViewModel
+<h1>Курси валют:</h1>
 <h2>Курси Національного банку України:</h2>
 @foreach (ExchangeRate exchangeRates in Model.nbuRates.rates)
 {
