--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,17 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
-
-<p>Use this page to detail your site's privacy policy.</p>
+<h1>Про вебсайт</h1>
+<h2>Основні можливості</h2>
+<ul>
+    <li>Перегляд актуальних курсів валют з провідних банків.</li>
+    <li>Порівняння курсів валют між банками.</li>
+    <li>Отримання сповіщень про зміни курсів.</li>
+</ul>
+<h2>Джерела інформації</h2>
+<ul>
+    <li><a href="https://www.oschadbank.ua/">Ощад банк</a></li>
+    <li><a href="https://privatbank.ua/">Приват банк</a></li>
+    <li><a href="https://www.monobank.ua/?lang=uk">Моно банк</a></li>
+    <li><a href="https://minfin.com.ua/">Мінфін</a></li>
+</ul>
