--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,8 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <a asp-controller="home" asp-action="CurrencyExchangeRates">Go to Another Page</a>
+    <h1 class="display-4">Курси валют</h1>
+    <a asp-controller="home" asp-action="CurrencyExchangeRates">Всі курси валют</a>
 
 </div>
